--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <span class="btn-icon">📋</span>
             <span class="btn-text">View Faction Details</span>
         </a>
-        <a href="character.html" class="character-btn">
+        <a href="login.html" class="character-btn">
             <span class="btn-icon">⚔️</span>
             <span class="btn-text">Character Creation</span>
         </a>
