--- a/public/character.html
+++ b/public/character.html
@@ -346,7 +346,7 @@
         
         async function validateSession() {
             try {
-                const response = await fetch('/api/auth/validate', {
+                const response = await fetch('https://hexwars-api.onrender.com/api/auth/validate', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -384,7 +384,7 @@
         async function logout() {
             try {
                 // Call logout API
-                await fetch('/api/auth/logout', {
+                await fetch('https://hexwars-api.onrender.com/api/auth/logout', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
