--- a/public/login.html
+++ b/public/login.html
@@ -178,7 +178,7 @@
             const password = document.getElementById('password').value;
             
             try {
-                const response = await fetch('/api/auth/login', {
+                const response = await fetch('https://hexwars-api.onrender.com/api/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
