--- a/public/register.html
+++ b/public/register.html
@@ -218,7 +218,7 @@
             }
             
             try {
-                const response = await fetch('/api/auth/register', {
+                const response = await fetch('https://hexwars-api.onrender.com/api/auth/register', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
