--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
             <span class="btn-icon">📋</span>
             <span class="btn-text">View Faction Details</span>
         </a>
+        <a href="resources.html" class="character-btn">
+            <span class="btn-icon">💰</span>
+            <span class="btn-text">Resource Calculator</span>
+        </a>
         <a href="login.html" class="character-btn">
             <span class="btn-icon">⚔️</span>
             <span class="btn-text">Character Creation</span>
