Updated unit values & text to reflect backend changes

--- a/public/factions.html
+++ b/public/factions.html
@@ -66,7 +66,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>Swordsman</td><td>Can claim land and buildings</td><td>2</td><td>3</td><td>0</td><td>0%</td><td>1</td></tr>
+                <tr><td>Swordsman</td><td>Can claim land and buildings</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>1</td></tr>
                 <tr><td>Knight</td><td>Cavalry charge after winning battles</td><td>3</td><td>2</td><td>0</td><td>0%</td><td>2</td></tr>
                 <tr><td>Catapult</td><td>Reduces defensive buildings bonus by 10%</td><td>3</td><td>1</td><td>2</td><td>10%</td><td>1</td></tr>
                 <tr><td>Destroyer</td><td>None</td><td>3</td><td>3</td><td>0</td><td>0%</td><td>2</td></tr>
@@ -104,7 +104,7 @@
                 <tr><td>Ballista</td><td>Reduces defensive buildings bonus by 8%</td><td>2</td><td>2</td><td>1</td><td>8%</td><td>2</td></tr>
                 <tr><td>Marauder</td><td>None</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>3</td></tr>
                 <tr><td>Bireme</td><td>Reduces defensive buildings bonus by 8%</td><td>1</td><td>1</td><td>2</td><td>8%</td><td>2</td></tr>
-                <tr><td>Lord of the Swamp</td><td>Allows army to cross rivers</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>2</td></tr>
+                <tr><td>Lord of the Swamp</td><td>Allows army to cross rivers. & If units are adjacent to a sea tile, their attack & defense values are increased by 10%</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>2</td></tr>
                 <tr><td>Lord of the Tides</td><td>Marauders get +1 attack damage</td><td>3</td><td>2</td><td>0</td><td>0%</td><td>3</td></tr>
             </tbody>
         </table>
@@ -134,7 +134,7 @@
             <tbody>
                 <tr><td>Ranger</td><td>Can claim land and buildings</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>2</td></tr>
                 <tr><td>Sentinel</td><td>None</td><td>3</td><td>1</td><td>2</td><td>0%</td><td>2</td></tr>
-                <tr><td>Siege Tower</td><td>Reduces defensive buildings bonus by 20%</td><td>1</td><td>4</td><td>1</td><td>12%</td><td>1</td></tr>
+                <tr><td>Siege Tower</td><td>Reduces defensive buildings bonus by 12%</td><td>1</td><td>4</td><td>1</td><td>12%</td><td>1</td></tr>
                 <tr><td>Corvette</td><td>None</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>3</td></tr>
                 <tr><td>Galley</td><td>Reduces defensive buildings bonus by 8%</td><td>1</td><td>1</td><td>2</td><td>8%</td><td>2</td></tr>
                 <tr><td>Legionaire</td><td>Allied support increased by 10%</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>2</td></tr>
@@ -165,7 +165,7 @@
             <tbody>
                 <tr><td>Bearzerker</td><td>Can claim land and buildings</td><td>3</td><td>3</td><td>0</td><td>0%</td><td>1</td></tr>
                 <tr><td>Yotes</td><td>Must recruit two at a time</td><td>2</td><td>1</td><td>0</td><td>0%</td><td>2</td></tr>
-                <tr><td>Battering Ram</td><td>Reduces defensive buildings bonus by 20%</td><td>1</td><td>3</td><td>0</td><td>15%</td><td>1</td></tr>
+                <tr><td>Battering Ram</td><td>Reduces defensive buildings bonus by 12%</td><td>1</td><td>3</td><td>0</td><td>12%</td><td>1</td></tr>
                 <tr><td>Warship</td><td>None</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>2</td></tr>
                 <tr><td>Karve</td><td>Reduces defensive buildings bonus by 8%</td><td>1</td><td>1</td><td>2</td><td>8%</td><td>2</td></tr>
                 <tr><td>Shaiyan Battle Born</td><td>Bearzerkers get +1 attack for 1 food each</td><td>3</td><td>3</td><td>0</td><td>0%</td><td>1</td></tr>
@@ -196,7 +196,7 @@
             <tbody>
                 <tr><td>Guardian</td><td>Can claim land and buildings</td><td>3</td><td>3</td><td>0</td><td>0%</td><td>1</td></tr>
                 <tr><td>Crossbowmen</td><td>None</td><td>2</td><td>2</td><td>1</td><td>0%</td><td>1</td></tr>
-                <tr><td>Trebuchet</td><td>Reduces defensive buildings bonus by 30%</td><td>1</td><td>1</td><td>1</td><td>20%</td><td>1</td></tr>
+                <tr><td>Trebuchet</td><td>Reduces defensive buildings bonus by 16%</td><td>1</td><td>1</td><td>1</td><td>16%</td><td>1</td></tr>
                 <tr><td>Ironclad</td><td>None</td><td>2</td><td>3</td><td>0</td><td>0%</td><td>2</td></tr>
                 <tr><td>Cruiser</td><td>Reduces defensive buildings bonus by 8%</td><td>1</td><td>1</td><td>2</td><td>8%</td><td>2</td></tr>
                 <tr><td>Death Knight</td><td>All basic units get +1 movement</td><td>3</td><td>3</td><td>0</td><td>0%</td><td>2</td></tr>
@@ -228,8 +228,6 @@
                 <tr><td>Thrall</td><td>Basic unit, can be harvested</td><td>2</td><td>1</td><td>0</td><td>0%</td><td>1</td></tr>
                 <tr><td>Lost Soul</td><td>Collects 100% of killed units from battles</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>1</td></tr>
                 <tr><td>Harvestor</td><td>Harvests thralls, reduces enemy combat by 3-5%</td><td>0</td><td>15</td><td>0</td><td>60%</td><td>0</td></tr>
-                <tr><td>Dreadnaught</td><td>Combat ship, costs 4 thralls</td><td>2</td><td>2</td><td>0</td><td>0%</td><td>2</td></tr>
-                <tr><td>Haunter</td><td>Transport ship, reduces building bonus by 8%</td><td>1</td><td>1</td><td>2</td><td>8%</td><td>2</td></tr>
                 <tr><td>Plaguebringer</td><td>Infects enemies with plague, takes 10% more damage</td><td>2</td><td>1</td><td>0</td><td>0%</td><td>1</td></tr>
                 <tr><td>Banshee King</td><td>Reanimates 100% of enemy losses as Lost Souls</td><td>2</td><td>1</td><td>0</td><td>0%</td><td>1</td></tr>
             </tbody>
