--- a/public/resources.html
+++ b/public/resources.html
@@ -463,13 +463,13 @@
 
     <style>
         .resource-pool-section {
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto 30px auto;
         }
 
         .resource-pool-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(4, 1fr);
             gap: 20px;
             margin-top: 20px;
         }
