Fixed Gold icon for recources page

--- a/public/resources.html
+++ b/public/resources.html
@@ -43,7 +43,7 @@
                         <input type="number" id="poolFood" min="0" value="0" placeholder="0">
                     </div>
                     <div class="resource-pool-item">
-                        <span class="resource-icon">🪙</span>
+                        <span class="resource-icon">💰</span>
                         <label for="poolGold">Gold:</label>
                         <input type="number" id="poolGold" min="0" value="0" placeholder="0">
                     </div>
@@ -271,7 +271,7 @@
                                     <span class="cost-value">${unit.food}</span>
                                 </span>
                                 <span class="cost-item">
-                                    <span class="cost-icon">🪙</span>
+                                    <span class="cost-icon">💰</span>
                                     <span class="cost-value">${unit.gold}</span>
                                 </span>
                                 <span class="cost-item">
