Updated frontend; overhaul

--- a/public/factions.html
+++ b/public/factions.html
@@ -16,13 +16,23 @@
     <!-- Title -->
     <h1 style="text-align: center;">FACTIONS OF HEX WARS</h1>
 
-    <!-- View Battle Calc Button -->
-    <div style="text-align: center; margin-bottom: 20px;">
-        <a href="index.html">
-            <button
-                style="padding: 10px 20px; font-size: 16px; background-color: #444; color: white; border: none; cursor: pointer;">
-                View Battle Calculator
-            </button>
+    <!-- Navigation Card -->
+    <div class="nav-card">
+        <a href="index.html" class="nav-btn battle-btn">
+            <span class="btn-icon">⚔️</span>
+            <span class="btn-text">Battle Calculator</span>
+        </a>
+        <a href="resources.html" class="nav-btn resources-btn">
+            <span class="btn-icon">💰</span>
+            <span class="btn-text">Resource Calculator</span>
+        </a>
+        <a href="login.html" class="nav-btn login-btn">
+            <span class="btn-icon">👤</span>
+            <span class="btn-text">Character Creation</span>
+        </a>
+        <a href="character.html" class="nav-btn character-btn">
+            <span class="btn-icon">⚔️</span>
+            <span class="btn-text">My Characters</span>
         </a>
     </div>
 
