--- a/public/index.html
+++ b/public/index.html
@@ -18,17 +18,21 @@
 
     <!-- Navigation Card -->
     <div class="nav-card">
-        <a href="factions.html" class="factions-btn">
+        <a href="factions.html" class="nav-btn factions-btn">
             <span class="btn-icon">📋</span>
-            <span class="btn-text">View Faction Details</span>
+            <span class="btn-text">Faction Details</span>
         </a>
-        <a href="resources.html" class="character-btn">
+        <a href="resources.html" class="nav-btn resources-btn">
             <span class="btn-icon">💰</span>
             <span class="btn-text">Resource Calculator</span>
         </a>
-        <a href="login.html" class="character-btn">
-            <span class="btn-icon">⚔️</span>
+        <a href="login.html" class="nav-btn login-btn">
+            <span class="btn-icon">👤</span>
             <span class="btn-text">Character Creation</span>
+        </a>
+        <a href="character.html" class="nav-btn character-btn">
+            <span class="btn-icon">⚔️</span>
+            <span class="btn-text">My Characters</span>
         </a>
     </div>
 
