--- a/public/resources.html
+++ b/public/resources.html
@@ -320,7 +320,7 @@
             ],
             Raiders: [
                 { name: "Raider", food: 5, gold: 2, iron: 2, other: 0 },
-                { name: "Marauder", food: 5, gold: 4, iron: 3, other: 0 },
+                { name: "Hunter", food: 5, gold: 4, iron: 3, other: 0 },
                 { name: "Ballista", food: 2, gold: 4, iron: 4, other: 0 },
                 { name: "Marauder", food: 15, gold: 4, iron: 4, other: 0 },
                 { name: "Bireme", food: 10, gold: 3, iron: 3, other: 0 },
