Updated Ironborne Leaders (Death Knight for Guardian) git push origin main

--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@
             "Empire": ["Legionaire", "Imperial guard"],
             "Raiders": ["Lord of the Swamp", "Lord of the Tides"],
             "HORDE": ["Shaiyan Battleborn", "Throgg Stoneface"],
-            "Ironborne": ["Silverbolt", "Guardian"],
+            "Ironborne": ["Death Knight", "Silverbolt"],
             "Vanguard": ["Duke", "Archer"],
             "Damned": ["Plaguebringer", "Banshee King"]
         };
