html for lore and faction details

--- a/public/factions.html
+++ b/public/factions.html
@@ -30,9 +30,9 @@
             <span class="btn-icon">👤</span>
             <span class="btn-text">Character Creation</span>
         </a>
-        <a href="character.html" class="nav-btn character-btn">
-            <span class="btn-icon">⚔️</span>
-            <span class="btn-text">My Characters</span>
+        <a href="lore.html" class="nav-btn lore-btn">
+            <span class="btn-icon">📚</span>
+            <span class="btn-text">Lore</span>
         </a>
     </div>
 
@@ -46,7 +46,7 @@
     </div>
 
     <div class="faction-card vanguard">
-        <div class="faction-title vanguard"><span class="faction-emblem">🛡️</span> Vanguard</div>
+        <div class="faction-title vanguard"><a href="faction-vanguard.html" class="faction-link"><span class="faction-emblem">🛡️</span> Vanguard</a></div>
         <div class="faction-desc">
             To the esteemed General,<br>
             The time has come to answer the call of duty and lead the Vanguard to new heights of glory. As the shield
@@ -88,7 +88,7 @@
     </div>
 
     <div class="faction-card raiders" id="raiders" data-watermark="⚓">
-        <div class="faction-title raiders"><span class="faction-emblem">⚓</span> Raiders</div>
+        <div class="faction-title raiders"><a href="faction-raiders.html" class="faction-link"><span class="faction-emblem">⚓</span> Raiders</a></div>
         <div class="faction-desc">
             Brothers and sisters of the storm, the sea gods have spoken, and our warlord has been chosen. The time has come for you to rise above all, chosen by the very gods who command the waves. You stand here, surrounded by the fiercest warriors this world has ever known, ready to lead the Great Invasion!<br><br>
             The Raiders are a faction forged for those who command the battlefield with unmatched speed and relentless cunning. Only the sharpest minds and the boldest warriors are fit to lead this ferocious tide. As masters of the sea, the Raiders leverage their enhanced mobility to outmaneuver enemies and execute deadly hit-and-run tactics. The Hunter, our most feared unit, will be your spear, renown for hunting Orcs as ancient tradition. They have exceptional attack and defense capabilities against all but are buffed 15% when facing the HORDE.<br><br>
@@ -121,7 +121,7 @@
     </div>
 
     <div class="faction-card empire" id="empire" data-watermark="🏰">
-        <div class="faction-title empire"><span class="faction-emblem">🏰</span> Empire</div>
+        <div class="faction-title empire"><a href="faction-empire.html" class="faction-link"><span class="faction-emblem">🏰</span> Empire</a></div>
         <div class="faction-desc">
             <i>By the unwavering command of the High Council, you have been summoned to lead the Royal Army, a role reserved only for the most exceptional of our kind. This is not a request but a decree from the highest authority—your destiny has been chosen, and it is one of unparalleled honor and responsibility.</i><br><br>
             Lead our noble legions to glory and let the world tremble before our unparalleled power and grace. Embrace the might of the Empire, a faction that strikes hard and fast, leaving their enemies in ruin. The Empire excels in high-damage attacks, though their units trade defense for speed and power. Central to their strategy is the Siege Tower, a unit with unparalleled defense that protects their more vulnerable forces. Push into enemy territory with these formidable towers, while your high-damage units dismantle the opposition. The Empire's long-standing conflict with the HORDE has made them experts in warfare, granting a 10% attack and defense bonus when fighting against the vile HORDE. Additionally, their ranged units receive a bonus when fighting in forested areas, reflecting their deep connection to the natural world. With leaders who can rain down volleys of arrows to weaken enemy forces or reduce infrastructure costs, the Empire is ideal for players who seek to overwhelm their foes with precision strikes.<br><br>
@@ -154,7 +154,7 @@
     </div>
 
     <div class="faction-card horde" id="horde" data-watermark="🐺">
-        <div class="faction-title horde"><span class="faction-emblem">🐺</span> HORDE</div>
+        <div class="faction-title horde"><a href="faction-horde.html" class="faction-link"><span class="faction-emblem">🐺</span> HORDE</a></div>
         <div class="faction-desc">
             Chieftain, the time has come to unleash your wrath and lead the HORDE to unmatched glory! The blood of conquerors flows through your veins—now is your moment to carve a path of destruction and claim your rightful place as the scourge of our enemies. Command the warbands of the HORDE, harness the rage of our warriors, and drive us to victory on the battlefield. The HORDE is a faction for those who revel in chaos and relentless aggression. As the Saang'vor warriors of the battlefield, they field high-damage units with strong defense at a low cost, though their armies are limited by supply constraints. Instead of massing large forces, the HORDE relies on numerous smaller armies to overwhelm their enemies in waves. Their Battering Ram siege unit provides cover as they storm enemy defenses, making them a terrifying force in close combat. The HORDE's leaders work in unison, with one pillaging resources from defeated foes, while the other unleashes Bearzerkers who gain extra attack damage when enraged. If you seek to crush your enemies under the sheer weight of numbers and ferocity, the HORDE will lead you to glorious conquest. The weak will be crushed, the strong will kneel, and under your leadership, the HORDE will reign supreme! Rise, Chieftain! The drums of war are calling you to greatness!
         </div>
@@ -185,7 +185,7 @@
     </div>
 
     <div class="faction-card ironborne" id="ironborne" data-watermark="⛏️">
-        <div class="faction-title ironborne"><span class="faction-emblem">⛏️</span> Ironborne</div>
+        <div class="faction-title ironborne"><a href="faction-ironborne.html" class="faction-link"><span class="faction-emblem">⛏️</span> Ironborne</a></div>
         <div class="faction-desc">
             For those who seek unyielding resilience and overwhelming power, the Ironborne stand as your unbreakable hammer to dominate your foes. Seize your destiny and forge your legacy with the might of the Terrador elite. As the most defensive faction, the Ironborne Dwarves are slow but nearly unstoppable once they reach the battlefield. Their basic units boast high attack damage and formidable defense, making them a force to be reckoned with. The Ironborne's special unit, the Defender, enhances the defense of their army, while the Trebuchet siege unit is designed to crush enemy fortifications with ease. Though their army is costly and slow, the Ironborne's patience pays off when they breach enemy gates. For the Ironborne, the path to victory is fortified by the strength of their leaders. The Basic Leader brings devastating power with his silver bolts, granting a 10% attack buff against all living races and an overwhelming 15% attack buff against their non-living foes. The Special Leader, a master of defense, fortifies the Ironborne's position with a 10% defensive buff, so long as the army stands on a tile owned by their proud people. With such leaders at your command, the Ironborne becomes an impenetrable force, ready to crush all who dare oppose you.
         </div>
@@ -216,7 +216,7 @@
     </div>
 
     <div class="faction-card damned" id="damned" data-watermark="💀">
-        <div class="faction-title damned"><span class="faction-emblem">💀</span> Damned</div>
+        <div class="faction-title damned"><a href="faction-damned.html" class="faction-link"><span class="faction-emblem">💀</span> Damned</a></div>
         <div class="faction-desc">
             Arise, forsaken one, for death has called upon you to spread his shadow across the lands. No longer bound by the frailties of mortal life, you are reborn as the harbinger of doom, the dark general of the Damned. The cold grip of death is no end, but a beginning—your will is now eternal, your power unyielding. As a servant of the Damned, you are destined to lead our legion of the fallen. The Damned are unlike any other faction, embodying death and decay with a unique playstyle that will challenge even the most experienced commanders. As the only non-living race, the Damned have no supply limits, and their units cost nothing to muster, as they are harvested from the earth itself. The Damned spread their influence by erecting Harvesters to claim surrounding territory and expand their undead legions. The Harvester siege unit is the cornerstone of their strategy. Construct a harvester by consuming basic units which in turn will spawn more undead soldiers. Their special unit, the Lost Soul, emerges from the fallen bodies of the living, no matter where they die across the battlefield. With leaders who spread plague or resurrect fallen enemies, the Damned grow stronger as the world around them dies. Your army awaits your command, hungering for souls to fuel our unholy march of doom.
         </div>
