--- a/public/login.html
+++ b/public/login.html
@@ -142,9 +142,9 @@
             <span class="btn-icon">💰</span>
             <span class="btn-text">Resource Calculator</span>
         </a>
-        <a href="character.html" class="nav-btn character-btn">
-            <span class="btn-icon">⚔️</span>
-            <span class="btn-text">My Characters</span>
+        <a href="lore.html" class="nav-btn lore-btn">
+            <span class="btn-icon">📚</span>
+            <span class="btn-text">Lore</span>
         </a>
     </div>
 
